@@ -1,3 +1,11 @@
+2002-12-04  James Henstridge  <james@daa.com.au>
+
+	* src/font-view.c (main): start of simple font viewer program.
+	Doesn't correctl display the text yet though :(
+
+	* src/ftstream-vfs.c (FT_New_Face_From_URI): rename function to
+	match naming scheme used elsewhere.
+
 2002-12-02  James Henstridge  <james@daa.com.au>
 
 	* src/thumbnailer.c (draw_char): split code for drawing character
